kubernetes/home/apps/networking/traefik/app/metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics-service
  namespace: default
  labels:
    app: traefik-metrics
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: metrics
    port: 9100
