kubernetes/home/apps/networking/traefik/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: shaklab-com-tls-certs
